fix: contact page form title and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -12027,10 +12027,21 @@ ul.children {
 .contact-form-area .comment-form {
   margin-top: 0;
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .contact-form-area .comment-title-section .title {
+    font-size: 30px;
+  }
+}
 .contact-form-area .comment-title-section .desc {
   margin-top: 17px;
   margin-bottom: 43px;
   letter-spacing: -0.5px;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .contact-form-area .comment-title-section .desc {
+    margin-bottom: 26px;
+    font-weight: 600;
+  }
 }
 .contact-form-area .comment-respond input,
 .contact-form-area .comment-respond textarea {
