--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -91,10 +91,19 @@
         margin-top: 0;
     }
     .comment-title-section {
+        .title{
+            @include sm{
+                font-size: 30px;
+            }
+        }
         .desc {
             margin-top: 17px;
             margin-bottom: 43px;
             letter-spacing: -0.5px;
+            @include sm{
+                margin-bottom: 26px;
+                font-weight: 600;
+            }
         }
     }
     .comment-respond{
